BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithPermsXLation/src/objects/Contract_Party_Purchase_Org_HCPTS__c.object
<CustomObject>
    <description>Junction object linking Payee (Vendor) to Purchase Org</description>
    <fields>
        <fullName>Contract_Party_HCPTS__c</fullName>
        <description>Lookup to Payee (Vendor)</description>
        <label>Payee</label>
        <referenceTo>EM_Vendor_vod__c</referenceTo>
        <relationshipName>Contract_Party_Purchase_Orgs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deletion_Flag_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Org_Details1_HCPTS__c</fullName>
        <label>Purchase Org Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Org_Details_HCPTS__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to Purchase org</description>
        <label>Purchase Org Details</label>
        <referenceTo>Purchase_Org_Details_HCPTS__c</referenceTo>
        <relationshipName>Contract_Party_Purchase_Orgs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchasing_Block_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchasing Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Vendor_ID_HCPTS__c</fullName>
        <formula>Contract_Party_HCPTS__r.Vendor_ID_HCPTS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Vendor ID</label>
        <type>Text</type>
    </fields>
    <label>Payee Purchase Org</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPPO-{0000000000}</displayFormat>
        <label>Payee Purchase Org Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payee Purchase Orgs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>